# SnailPlayer

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/snail/snailplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: common.h  event_callback.cpp  event_callback.h  log_util.cpp  log_util.h  native-lib.cpp  native_window_render.cpp  native_window_render.h  opensles_render.cpp  opensles_render.h  snail_player.cpp  snail_player.h  time_callback.cpp  time_callback.h
app/src/main/java/com/snail/snailplayer/: MainActivity.kt
app/src/main/java/com/snail/snailplayer/base/: BaseActivity.kt  SnailPlayerEventCallback.kt  SnailPlayerTimeListener.kt
app/src/main/java/com/snail/snailplayer/native/: SnailPlayerNative.kt
app/src/main/res/drawable/: seek_bar_thumb.xml
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/snail/snailplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
